# credit-risk-modelling

./: .gitignore  README.md  pyproject.toml
models/: pd_model.sav
notebooks/: credit_risk_modelling.ipynb  lgd_ead_models.ipynb  pd_model.ipynb  preprocessing.ipynb
