[tool.poetry]
name = "credit-risk-modelling"
version = "0.1.0"
description = ""
authors = ["Lucas Okamura <lucas.okamura@loft.com.br>"]
readme = "README.md"
packages = [{include = "credit_risk_modelling"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
scikit-learn = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
